# yotei

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/adr/: 001-internal-scheduler-state-store.md
docs/migrations/: 001-portable-yotei-state.md
docs/plans/: 001-portable-yotei.md
docs/research/: 001-codex-session-contract.md  001-yolobox-pr2-scheduled-agent-runner.md
specs/: spec.md  user-flow.md
src/yotei/: __init__.py  __main__.py  cli.py  config.py  db.py  notify.py  runner.py  schedule.py
tests/: test_cli.py  test_config.py  test_db.py  test_installed_tool_smoke.py  test_notify.py  test_runner.py  test_schedule.py
