[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "yotei"
version = "0.1.0"
description = "Scheduler for unattended Codex tasks with Telegram notifications"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
authors = [
    { name = "massun-onibakuchi" },
]
keywords = [
    "automation",
    "cli",
    "codex",
    "scheduler",
    "telegram",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
yotei = "yotei.cli:main"

[project.urls]
Homepage = "https://github.com/massun-onibakuchi/yotei"
Repository = "https://github.com/massun-onibakuchi/yotei"
Issues = "https://github.com/massun-onibakuchi/yotei/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
